tests/paczka1/fuzzy1/36558671.err
Error in line 4: SxAoTaFy A243 17,1
Error in line 22: A61_ S35_ 110,0
Error in line 23: SxAoTaFy S414 100,93
Error in line 7: A618 S358 26,9
Error in line 21: SxAoTaFy S414 28,9
Error in line 18: Wao S414 40,8
Error in line 30: Wao A243 57,6
Error in line 36: Wao S414 35,6
